# grpc_etcd

./: .gitignore  Cargo.toml  README.md  build.rs
doc/: search-index.js
doc/grpc_etcd/: index.html  sidebar-items.js
doc/grpc_etcd/auth/: Permission_Type.t.html  enum.Permission_Type.html  fn.file_descriptor_proto.html  index.html  sidebar-items.js  struct.Permission.html  struct.Role.html  struct.User.html
doc/grpc_etcd/kv/: Event_EventType.t.html  enum.Event_EventType.html  fn.file_descriptor_proto.html  index.html  sidebar-items.js  struct.Event.html  struct.KeyValue.html
doc/grpc_etcd/rpc/: AlarmMember.t.html  AlarmRequest.t.html  AlarmRequest_AlarmAction.t.html  AlarmResponse.t.html  AlarmType.t.html  AuthDisableRequest.t.html  AuthDisableResponse.t.html  AuthEnableRequest.t.html  AuthEnableResponse.t.html  AuthRoleAddRequest.t.html  AuthRoleAddResponse.t.html  AuthRoleDeleteRequest.t.html  AuthRoleDeleteResponse.t.html  AuthRoleGetRequest.t.html  AuthRoleGetResponse.t.html  AuthRoleGrantPermissionRequest.t.html  AuthRoleGrantPermissionResponse.t.html  AuthRoleListRequest.t.html  AuthRoleListResponse.t.html  AuthRoleRevokePermissionRequest.t.html  AuthRoleRevokePermissionResponse.t.html  AuthUserAddRequest.t.html  AuthUserAddResponse.t.html  AuthUserChangePasswordRequest.t.html  AuthUserChangePasswordResponse.t.html  AuthUserDeleteRequest.t.html  AuthUserDeleteResponse.t.html  AuthUserGetRequest.t.html  AuthUserGetResponse.t.html  AuthUserGrantRoleRequest.t.html  (+148 more)
src/: auth.proto  auth.rs  kv.proto  kv.rs  lib.rs  mod.rs  rpc.proto  rpc.rs  rpc_grpc.rs
(+124 files in other folders)
